--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,30 +6,18 @@
 body{
     background-color: #a7b3ec;
     background-image: url("https://images.unsplash.com/photo-1447078806655-40579c2520d6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
-    /* background-repeat: no-repeat;
-    background-repeat: no-repeat; */
-    /* text-align: center; */
-    
     background-color: black;
     width: auto;
     height: auto;
 }
 
-.authenticate{
-    display: flex;
-    list-style-type: none;
-    flex-flow: row wrap;
-    width: 80%;
-    margin: 0 auto;
-    justify-content: space-between;
-    padding-left: 0;
-}
 
 .new-user-form{
     text-align: center;
-    background-color: #898c90b8;;
-    margin: auto;
-    margin-top: 10%;
+    background-color: #898c90b8;
+    margin-left: 35%;
+    /* margin-right: 30%; */
+    margin-top: 15%;
     width: 400px;
     height: 500px;
     box-shadow: 5px 6px 30px -10px #24292e;
@@ -43,9 +31,10 @@ body{
 
 .login-form {
     text-align: center;
-    background-color: #898c90b8;;
-    margin: auto;
-    margin-top: 10%;
+    background-color: #898c90b8;
+    margin-left: 35%;
+    /* margin-right: 30%; */
+    margin-top: 15%;
     width: 400px;
     height: 500px;
     box-shadow: 5px 6px 30px -10px #24292e;
@@ -220,7 +209,7 @@ nav ul a{
     text-align: center;
     color: wheat;
     position: relative;
-    left: 50%;
+    left: 20%;
     font-size: 80px;
 }
 
@@ -229,10 +218,11 @@ nav ul a{
     color: wheat;
     position: absolute;
     left: 10%;
-    top: 20%;
+    top: 15%;
 }
 
 .player{
     position: relative;
     left: 25%;
 }
+
